--- a/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/05-countdown-timer/style.css
+++ b/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/05-countdown-timer/style.css
@@ -18,8 +18,9 @@ body {
   color: #fff;
 }
 
-.section {
+section {
   padding: 40px 0;
+  margin: 20px 0;
 }
 
 .countdown-container {
@@ -42,4 +43,11 @@ body {
 
 .box span {
   font-size: 1.5rem;
+}
+
+.btn {
+  background: linear-gradient(125deg, #3498db, #34495e);
+  color: #fff;
+  cursor: pointer;
+  transition: 0.4s;
 }
