--- a/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/07-colorify-app/style.css
+++ b/js-Fundamentals/12-DOM/02-javascript-dom-events/javascript-dom-events-in-action/07-colorify-app/style.css
@@ -14,6 +14,11 @@ section {
   height: 200px;
   border-radius: 50%;
   margin: 0 auto;
+  line-height: 100px;
+  color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 button {
