--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/03-DOM-Events/01-Projects-With-DOM-Events/08-To-Do-App/style.css
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/03-DOM-Events/01-Projects-With-DOM-Events/08-To-Do-App/style.css
@@ -1,9 +1,14 @@
 body {
   font-family: "Trirong", serif;
+  height: 100vh;
 }
-section {
+main {
   border: 2px dotted #ff004d;
-  padding: 40px 0;
+  /*background-color: #e5e5e5;*/
+}
+
+h1 {
+  text-align: center;
 }
 .add-new-tasks-container {
   background-color: #e2eede;
@@ -25,6 +30,9 @@ section {
 
 .btn {
   cursor: pointer;
+  padding: 10px 10px;
+  border-radius: 10px;
+  text-align: center;
 }
 
 .fa-solid {
