--- a/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/03-DOM-Events/01-Projects-With-DOM-Events/08-To-Do-App/style.css
+++ b/01-JavaScript-Fundamentals/12-DOM-with-JavaScript/03-DOM-Events/01-Projects-With-DOM-Events/08-To-Do-App/style.css
@@ -3,13 +3,20 @@ body {
   height: 100vh;
 }
 main {
-  border: 2px dotted #ff004d;
-  /*background-color: #e5e5e5;*/
+  margin: 0 50px;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+}
+section {
+  background-color: #fff;
+  /*width: 300px;*/
+  /*height: 500px;*/
+  border: 5px solid #abcea1;
+  padding: 15px;
+  border-radius: 8px;
 }
 
-h1 {
-  text-align: center;
-}
 .add-new-tasks-container {
   background-color: #e2eede;
   display: flex;
