styled Header component

--- a/02-JavaScript-Libraries/01-React/03-Next.js-Framework/my-next.js-app/src/app/Components/Forms/TextArea/TextArea.css
+++ b/02-JavaScript-Libraries/01-React/03-Next.js-Framework/my-next.js-app/src/app/Components/Forms/TextArea/TextArea.css
@@ -5,10 +5,12 @@
   padding: 8px 20px;
   background-color: #f5f5ff;
 }
+/*
 h1 {
   text-align: center;
   margin: 10px 0 20px;
 }
+*/
 
 .text-area-row {
   padding: 20px;
