--- a/02-JavaScript-Libraries/01-React/03-Next.js-Framework/my-next.js-app/src/app/globals.css
+++ b/02-JavaScript-Libraries/01-React/03-Next.js-Framework/my-next.js-app/src/app/globals.css
@@ -3,3 +3,20 @@
   padding: 0;
   margin: 0;
 }
+
+header {
+  background-color: #213547;
+  width: 100%;
+  border: 1px solid red;
+  padding: 40px 0;
+}
+.navbar-brand {
+  font-size: 2rem;
+  padding: 12px;
+  /*font-weight: bold;*/
+  font-weight: 400;
+}
+footer {
+  background-color: #dce2f0;
+  padding: 40px 0;
+}
